
nobase_dist_data_DATA = \
	themes/Squared-cadet/openbox-3/bullet.xbm \
	themes/Squared-cadet/openbox-3/close_disabled.xbm \
	themes/Squared-cadet/openbox-3/close_hover.xbm \
	themes/Squared-cadet/openbox-3/close_pressed.xbm \
	themes/Squared-cadet/openbox-3/close.xbm \
	themes/Squared-cadet/openbox-3/desk_disabled.xbm \
	themes/Squared-cadet/openbox-3/desk_hover.xbm \
	themes/Squared-cadet/openbox-3/desk_pressed.xbm \
	themes/Squared-cadet/openbox-3/desk_toggled_hover.xbm \
	themes/Squared-cadet/openbox-3/desk_toggled_pressed.xbm \
	themes/Squared-cadet/openbox-3/desk_toggled.xbm \
	themes/Squared-cadet/openbox-3/desk.xbm \
	themes/Squared-cadet/openbox-3/iconify_disabled.xbm \
	themes/Squared-cadet/openbox-3/iconify_hover.xbm \
	themes/Squared-cadet/openbox-3/iconify_pressed.xbm \
	themes/Squared-cadet/openbox-3/iconify.xbm \
	themes/Squared-cadet/openbox-3/max_disabled.xbm \
	themes/Squared-cadet/openbox-3/max_hover.xbm \
	themes/Squared-cadet/openbox-3/max_pressed.xbm \
	themes/Squared-cadet/openbox-3/max_toggled_hover.xbm \
	themes/Squared-cadet/openbox-3/max_toggled_pressed.xbm \
	themes/Squared-cadet/openbox-3/max_toggled.xbm \
	themes/Squared-cadet/openbox-3/max.xbm \
	themes/Squared-cadet/openbox-3/shade_disabled.xbm \
	themes/Squared-cadet/openbox-3/shade_hover.xbm \
	themes/Squared-cadet/openbox-3/shade_pressed.xbm \
	themes/Squared-cadet/openbox-3/shade_toggled_hover.xbm \
	themes/Squared-cadet/openbox-3/shade_toggled_pressed.xbm \
	themes/Squared-cadet/openbox-3/shade_toggled.xbm \
	themes/Squared-cadet/openbox-3/shade.xbm \
	themes/Squared-cadet/openbox-3/themerc

nobase_dist_data_DATA += \
	themes/Squared-grey/openbox-3/bullet.xbm \
	themes/Squared-grey/openbox-3/close_disabled.xbm \
	themes/Squared-grey/openbox-3/close_hover.xbm \
	themes/Squared-grey/openbox-3/close_pressed.xbm \
	themes/Squared-grey/openbox-3/close.xbm \
	themes/Squared-grey/openbox-3/desk_disabled.xbm \
	themes/Squared-grey/openbox-3/desk_hover.xbm \
	themes/Squared-grey/openbox-3/desk_pressed.xbm \
	themes/Squared-grey/openbox-3/desk_toggled_hover.xbm \
	themes/Squared-grey/openbox-3/desk_toggled_pressed.xbm \
	themes/Squared-grey/openbox-3/desk_toggled.xbm \
	themes/Squared-grey/openbox-3/desk.xbm \
	themes/Squared-grey/openbox-3/iconify_disabled.xbm \
	themes/Squared-grey/openbox-3/iconify_hover.xbm \
	themes/Squared-grey/openbox-3/iconify_pressed.xbm \
	themes/Squared-grey/openbox-3/iconify.xbm \
	themes/Squared-grey/openbox-3/max_disabled.xbm \
	themes/Squared-grey/openbox-3/max_hover.xbm \
	themes/Squared-grey/openbox-3/max_pressed.xbm \
	themes/Squared-grey/openbox-3/max_toggled_hover.xbm \
	themes/Squared-grey/openbox-3/max_toggled_pressed.xbm \
	themes/Squared-grey/openbox-3/max_toggled.xbm \
	themes/Squared-grey/openbox-3/max.xbm \
	themes/Squared-grey/openbox-3/shade_disabled.xbm \
	themes/Squared-grey/openbox-3/shade_hover.xbm \
	themes/Squared-grey/openbox-3/shade_pressed.xbm \
	themes/Squared-grey/openbox-3/shade_toggled_hover.xbm \
	themes/Squared-grey/openbox-3/shade_toggled_pressed.xbm \
	themes/Squared-grey/openbox-3/shade_toggled.xbm \
	themes/Squared-grey/openbox-3/shade.xbm \
	themes/Squared-grey/openbox-3/themerc

nobase_dist_data_DATA += \
	themes/Squared-green/openbox-3/bullet.xbm \
	themes/Squared-green/openbox-3/close_disabled.xbm \
	themes/Squared-green/openbox-3/close_hover.xbm \
	themes/Squared-green/openbox-3/close_pressed.xbm \
	themes/Squared-green/openbox-3/close.xbm \
	themes/Squared-green/openbox-3/desk_disabled.xbm \
	themes/Squared-green/openbox-3/desk_hover.xbm \
	themes/Squared-green/openbox-3/desk_pressed.xbm \
	themes/Squared-green/openbox-3/desk_toggled_hover.xbm \
	themes/Squared-green/openbox-3/desk_toggled_pressed.xbm \
	themes/Squared-green/openbox-3/desk_toggled.xbm \
	themes/Squared-green/openbox-3/desk.xbm \
	themes/Squared-green/openbox-3/iconify_disabled.xbm \
	themes/Squared-green/openbox-3/iconify_hover.xbm \
	themes/Squared-green/openbox-3/iconify_pressed.xbm \
	themes/Squared-green/openbox-3/iconify.xbm \
	themes/Squared-green/openbox-3/max_disabled.xbm \
	themes/Squared-green/openbox-3/max_hover.xbm \
	themes/Squared-green/openbox-3/max_pressed.xbm \
	themes/Squared-green/openbox-3/max_toggled_hover.xbm \
	themes/Squared-green/openbox-3/max_toggled_pressed.xbm \
	themes/Squared-green/openbox-3/max_toggled.xbm \
	themes/Squared-green/openbox-3/max.xbm \
	themes/Squared-green/openbox-3/shade_disabled.xbm \
	themes/Squared-green/openbox-3/shade_hover.xbm \
	themes/Squared-green/openbox-3/shade_pressed.xbm \
	themes/Squared-green/openbox-3/shade_toggled_hover.xbm \
	themes/Squared-green/openbox-3/shade_toggled_pressed.xbm \
	themes/Squared-green/openbox-3/shade_toggled.xbm \
	themes/Squared-green/openbox-3/shade.xbm \
	themes/Squared-green/openbox-3/themerc

nobase_dist_data_DATA += \
	themes/Squared-blue/openbox-3/bullet.xbm \
	themes/Squared-blue/openbox-3/close_disabled.xbm \
	themes/Squared-blue/openbox-3/close_hover.xbm \
	themes/Squared-blue/openbox-3/close_pressed.xbm \
	themes/Squared-blue/openbox-3/close.xbm \
	themes/Squared-blue/openbox-3/desk_disabled.xbm \
	themes/Squared-blue/openbox-3/desk_hover.xbm \
	themes/Squared-blue/openbox-3/desk_pressed.xbm \
	themes/Squared-blue/openbox-3/desk_toggled_hover.xbm \
	themes/Squared-blue/openbox-3/desk_toggled_pressed.xbm \
	themes/Squared-blue/openbox-3/desk_toggled.xbm \
	themes/Squared-blue/openbox-3/desk.xbm \
	themes/Squared-blue/openbox-3/iconify_disabled.xbm \
	themes/Squared-blue/openbox-3/iconify_hover.xbm \
	themes/Squared-blue/openbox-3/iconify_pressed.xbm \
	themes/Squared-blue/openbox-3/iconify.xbm \
	themes/Squared-blue/openbox-3/max_disabled.xbm \
	themes/Squared-blue/openbox-3/max_hover.xbm \
	themes/Squared-blue/openbox-3/max_pressed.xbm \
	themes/Squared-blue/openbox-3/max_toggled_hover.xbm \
	themes/Squared-blue/openbox-3/max_toggled_pressed.xbm \
	themes/Squared-blue/openbox-3/max_toggled.xbm \
	themes/Squared-blue/openbox-3/max.xbm \
	themes/Squared-blue/openbox-3/shade_disabled.xbm \
	themes/Squared-blue/openbox-3/shade_hover.xbm \
	themes/Squared-blue/openbox-3/shade_pressed.xbm \
	themes/Squared-blue/openbox-3/shade_toggled_hover.xbm \
	themes/Squared-blue/openbox-3/shade_toggled_pressed.xbm \
	themes/Squared-blue/openbox-3/shade_toggled.xbm \
	themes/Squared-blue/openbox-3/shade.xbm \
	themes/Squared-blue/openbox-3/themerc

